fix usermenu cropped avatar

--- a/src/app.global.scss
+++ b/src/app.global.scss
@@ -850,12 +850,6 @@ button {
 .chat-input-wrapper.direct-messaging {
     width: calc(100% - 265px);
 }
-
-.user-icon {
-    margin-top: -1px;
-    padding: 1px;
-}
-
 .search-wrapper {
     position: sticky;
     top: 0;
